Adapt check function with the new structure

--- a/r_package/testing/Preparation of input data.Rmd
+++ b/r_package/testing/Preparation of input data.Rmd
@@ -433,7 +433,7 @@ check_bestcost <-
     # Store the central estimate of the bestcost assessment
     
   result_vector_bestcost <- 
-    result_list_bestcost[["main"]]%>%
+    result_list_bestcost[["health_main"]]%>%
     # Set order of rows
     dplyr::arrange(factor(erf_ci, levels = c("central", "lower", "upper")))%>%
     dplyr::select(impact_rounded) %>%
