--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -1038,6 +1038,35 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_exposure_single_year_lifet
                result_vector_alternative = c(29274.89,	15328.16,	43118.30)) # AirQ+ approach result
                # result_vector_alternative = c(27742, 14641, 40542)) # GeLuft approach result
 
+
+# Now with input data from the Swiss project GeLuft and discounted
+bestcost_pm_yll_exposure_single_year_lifetable_geluft_discounted <-
+  healthiar::attribute_yll_from_lifetable(
+    approach_exposure = "single_year",
+    exp_central = input_data_mortality$exp[2], #exp CH 2019
+    prop_pop_exp = 1,
+    cutoff_central = input_data_mortality$cutoff[2], # WHO AQG 2021 
+    rr_central = input_data_mortality[2,"rr_central"], 
+    rr_lower = input_data_mortality[2,"rr_lower"], 
+    rr_upper =input_data_mortality[2,"rr_upper"], 
+    erf_increment = 10, 
+    erf_shape = "log_linear",
+    first_age_pop = 0,
+    last_age_pop = 99,
+    population_midyear_male = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female = lifetable_withPopulation[["female"]]$population, 
+    deaths_male = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_male,
+    deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
+    year_of_analysis = 2019, 
+    info = input_data_mortality$pollutant[2], 
+    min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2],
+    approach_discount = "hyperbolic_harvey_1986", 
+    #Alternatives: "exponential", "hyperbolic_harvey_1986" "hyperbolic_mazur_1987",
+    corrected_discount_rate = 0.01)
+
+check_bestcost(result_list_bestcost = bestcost_pm_yll_exposure_single_year_lifetable_geluft,
+               result_vector_alternative = c(26493, 13877, 39006)) # Results obtained on 5 Dec 2024
+
 ```
 
 
