The function works and give right results

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -211,11 +211,13 @@ bestcost_pm_copd_cost_discount <-
 
 # Monetize with all arguments (including discount)
 bestcost_pm_copd_cost_discount_single_value <- 
-  healthiar::include_cost(health_impact = 2E4, 
+  healthiar::include_cost(impact = 2E4, 
                           approach_discount = "exponential",
                           corrected_discount_rate = 0.03,
                           time_period = 20,
                           valuation = 1)
+check_general(bestcost_pm_copd_cost_discount_single_value$cost_rounded,
+              14877)
 # According to ChatGPT, the result should be 14877. 5 Dec 2024
 
 ```
