--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -204,7 +204,7 @@ bestcost_pm_copd_costs <-
 # Monetize with all arguments (including discount)
 bestcost_pm_copd_cost_discount <- 
   healthiar::include_cost(output = bestcost_pm_copd, 
-                          approach_discount = "exponential",
+                          discount_shape = "exponential",
                           corrected_discount_rate = 0.01,
                           time_period = 5,
                           valuation = 1000)
@@ -212,7 +212,7 @@ bestcost_pm_copd_cost_discount <-
 # Monetize with all arguments (including discount)
 bestcost_pm_copd_cost_discount_single_value <- 
   healthiar::include_cost(impact = 2E4, 
-                          approach_discount = "exponential",
+                          discount_shape = "exponential",
                           corrected_discount_rate = 0.03,
                           time_period = 20,
                           valuation = 1)
@@ -1051,7 +1051,7 @@ bestcost_pm_yll_exposure_single_year_lifetable_geluft <-
     year_of_analysis = 2019, 
     info = input_data_mortality$pollutant[2], 
     min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2],
-    approach_discount = "exponential", #Alternatives: "hyperbolic_harvey_1986" "hyperbolic_mazur_1987",
+    discount_shape = "exponential", #Alternatives: "hyperbolic_harvey_1986" "hyperbolic_mazur_1987",
     corrected_discount_rate = 0)
 
 check_bestcost(result_list_bestcost = bestcost_pm_yll_exposure_single_year_lifetable_geluft,
@@ -1080,7 +1080,7 @@ bestcost_pm_yll_exposure_single_year_lifetable_geluft_discounted <-
     year_of_analysis = 2019, 
     info = input_data_mortality$pollutant[2], 
     min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2],
-    approach_discount = "hyperbolic_harvey_1986", 
+    discount_shape = "hyperbolic_harvey_1986", 
     #Alternatives: "exponential", "hyperbolic_harvey_1986" "hyperbolic_mazur_1987",
     corrected_discount_rate = 0.01)
 
@@ -1884,7 +1884,7 @@ comparison_yll_lifetable_delta  <-
     info_2 = input_data_mortality$pollutant[2], 
     min_age = 20,
     corrected_discount_rate = 0.01,
-    approach_discount = "exponential")
+    discount_shape = "exponential")
 
 # View(comparison_yll_lifetable_delta)
 
