Bug fixed in indirect approach by adding missing code from get_deaths_yll_yld() that should in future be allocated in get_output() to avoid duplication

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -1024,9 +1024,7 @@ bestcost_pm_yll_exposure_single_year_lifetable_geluft <-
     deaths_female = airqplus_pm_deaths_yll[["pop"]]$number_of_deaths_female,
     year_of_analysis = 2019, 
     info = input_data_mortality$pollutant[2], 
-    min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2],
-    discount_shape = "exponential", #Alternatives: "hyperbolic_harvey_1986" "hyperbolic_mazur_1987",
-    corrected_discount_rate = 0)
+    min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2])
 
 check_bestcost(result_list_bestcost = bestcost_pm_yll_exposure_single_year_lifetable_geluft,
                result_vector_alternative = c(29274.89,	15328.16,	43118.30)) # AirQ+ approach result
@@ -1054,11 +1052,11 @@ bestcost_pm_yll_exposure_single_year_lifetable_geluft_discounted <-
     year_of_analysis = 2019, 
     info = input_data_mortality$pollutant[2], 
     min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2],
-    discount_shape = "hyperbolic_harvey_1986", 
+    discount_shape = "exponential", 
     #Alternatives: "exponential", "hyperbolic_harvey_1986" "hyperbolic_mazur_1987",
     corrected_discount_rate = 0.01)
 
-check_bestcost(result_list_bestcost = bestcost_pm_yll_exposure_single_year_lifetable_geluft,
+check_bestcost(result_list_bestcost = bestcost_pm_yll_exposure_single_year_lifetable_geluft_discounted,
                result_vector_alternative = c(26493, 13877, 39006)) # Results obtained on 5 Dec 2024
 
 ```
@@ -1856,9 +1854,7 @@ comparison_yll_lifetable_delta  <-
     year_of_analysis_2 = 2019, 
     info_1 = input_data_mortality$pollutant[2],
     info_2 = input_data_mortality$pollutant[2], 
-    min_age = 20,
-    corrected_discount_rate = 0.01,
-    discount_shape = "exponential")
+    min_age = 20)
 
 # View(comparison_yll_lifetable_delta)
 
@@ -2399,15 +2395,17 @@ check_general(bestcost_pm_copd_cost_discount_single_value$cost_rounded,
 
 
 
+# Discounting without valuation (=1)
 bestcost_pm_yll_lifetable_geluft_discount <- 
   healthiar::include_cost(approach_discount = "indirect",
                           output = bestcost_pm_yll_exposure_single_year_lifetable_geluft, 
-                          discount_shape = "hyperbolic_harvey_1986",
+                          discount_shape = "exponential",
                           corrected_discount_rate = 0.01,
                           valuation = 1)
 
 check_general(bestcost_pm_yll_lifetable_geluft_discount[["cost_main"]]$cost_rounded,
               c(26493, 13877, 39006))
+# Result on 13 Dec 2025. Same result as discouting in attribute() (deprecated).
 
 ```
 
