--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -763,13 +763,18 @@ bestcost_noise_ihd_expDist_iteration_uncertainty <- include_summary_uncertainty(
 round(as.numeric(bestcost_noise_ihd_expDist_iteration[["health_detailed"]][["raw"]] |> filter(erf_ci == "central") |> filter(exp_ci == "central") |> pull(impact_rounded)), digits = 0) 
 ## Summary uncertainty estimates from include_summary_uncertainty()
 round(as.numeric(bestcost_noise_ihd_expDist_iteration_uncertainty[["uncertainty_detailed"]][["geo_specific"]]$impact_central), digits = 0)
-# Results are higher due to difference in PAF of categories 2 & 3
+# Results are higher due to difference in PAF of geo units 2 & 3
+
+## Check PAFs  of geo units
+print("Main (PAF's of 1st/2nd/3rd geo unit)")
+bestcost_noise_ihd_expDist_iteration[["health_detailed"]][["raw"]] |> filter(erf_ci == "central") |> filter(exp_ci == "central") |> pull(pop_fraction)
+## The PAF from the attribute call of geo unit 2 (0.0800) doesn't match with the one obtained in the example_road_noise_niph_test.xlsx, while the PAF for geo unit 2 of the include_summary_uncertainty call does
 
 # Check aggregated impact
 print("Main estimate: ") ; bestcost_noise_ihd_expDist_iteration[["health_main"]][["impact_rounded"]]
 print("Summary uncertainty estimates (extern uncertainty function): ")
 round(as.numeric(bestcost_noise_ihd_expDist_iteration_uncertainty[["uncertainty_main"]] |> pull(central_estimate)), digits = 0)
-# Aggregated results are higher due to difference in PAF of categories 2 & 3
+# Aggregated results are higher due to difference in PAF of geo units 2 & 3
 ```
 
 
@@ -919,6 +924,95 @@ bestcost_noise_ha_ar[["health_main"]][["impact_rounded"]]
 print("Summary uncertainty estimates (extern uncertainty function): ")
 round(as.numeric(bestcost_noise_ha_ar_external_uncertainty[["uncertainty_main"]]), digits = 0)
 # Results seem plausible
+```
+
+```{r Summary uncertainty ar single geo unit erf_eq uncertainty}
+
+
+# Get data
+niph_noise_ha_input <- 
+  niph_noise_ha_excel |>
+  dplyr::filter(!is.na(niph_noise_ha_excel$exposure_mean))
+
+# Internal get_ci function
+bestcost_noise_ha_ar_with_erf_eq <- 
+  healthiar::attribute_health(
+    approach_risk = "absolute_risk",
+    exp_central = niph_noise_ha_input$exposure_mean,
+    # exp_lower = niph_noise_ha_input$exposure_mean -2,
+    # exp_upper = niph_noise_ha_input$exposure_mean + 2,
+    prop_pop_exp = niph_noise_ha_input$population_exposed_total/sum(niph_noise_ha_input$population_exposed_total),
+    population = sum(niph_noise_ha_input$population_exposed_total),
+    erf_eq_central = "78.9270-3.1162*c+0.0342*c^2",
+    erf_eq_lower = "78.9270-3.1162*c+0.034*c^2",
+    erf_eq_upper = "78.9270-3.1162*c+0.04*c^2",
+    info = data.frame(pollutant = "road_noise", outcome = "highly_annoyance"),
+    )
+# View(bestcost_noise_ha_ar_with_erf_eq)
+
+bestcost_noise_ha_ar_with_erf_eq_mc <-
+  healthiar::include_summary_uncertainty(
+    res = bestcost_noise_ha_ar_with_erf_eq,
+    n_sim = 1000)
+
+# Comparison central +- 95% CIs & Monte-Carlo central, lower, upper estimates
+# View(bestcost_pm_yld_singlebhd_with_summary_uncertainty)
+print("Main estimates: ") ; bestcost_noise_ha_ar_with_erf_eq[["health_main"]][["impact_rounded"]]
+print("Summary uncertainty estimates (external function): ")
+round(as.numeric(bestcost_noise_ha_ar_with_erf_eq_mc[["uncertainty_main"]]), digits = 0)
+# Main result seems too low (it is only around half of the attribute result). 
+# However, I'm not sure if we can expect the results to be exactly the same with the methodology implemented... 
+
+```
+
+```{r Summary uncertainty ar iteration erf_eq uncertainty}
+
+
+# Get data
+niph_noise_ha_input <- 
+  niph_noise_ha_excel |>
+  dplyr::filter(!is.na(niph_noise_ha_excel$exposure_mean))
+
+# Internal get_ci function
+bestcost_noise_ha_ar_iteration_with_erf_eq <- 
+  healthiar::attribute_health(
+    approach_risk = "absolute_risk",
+    exp_central = list(niph_noise_ha_input$exposure_mean,
+                       niph_noise_ha_input$exposure_mean + 5,
+                       niph_noise_ha_input$exposure_mean + 10),
+    # exp_lower = list(niph_noise_ha_input$exposure_mean -2,
+    #                    niph_noise_ha_input$exposure_mean + 5 - 2,
+    #                    niph_noise_ha_input$exposure_mean + 10 - 2),
+    # exp_upper = list(niph_noise_ha_input$exposure_mean + 2,
+    #                    niph_noise_ha_input$exposure_mean + 5 + 2,
+    #                    niph_noise_ha_input$exposure_mean + 10 + 2),
+    prop_pop_exp = list(niph_noise_ha_input$population_exposed_total, 
+                   niph_noise_ha_input$population_exposed_total + 0.1,
+                   niph_noise_ha_input$population_exposed_total + 0.2),
+    population = list(runif_with_seed(1,5E3,1E4,1),
+                        runif_with_seed(1,5E3,1E4,2), 
+                        runif_with_seed(1,5E3,1E4,3)),
+    erf_eq_central = "78.9270-3.1162*c+0.0342*c^2",
+    erf_eq_lower = "78.9270-3.1162*c+0.034*c^2",
+    erf_eq_upper = "78.9270-3.1162*c+0.04*c^2",
+    geo_id_raw = 1:3, 
+    geo_id_aggregated = rep("CH", 3),
+    info = data.frame(pollutant = "road_noise", outcome = "highly_annoyance"),
+    )
+# View(bestcost_noise_ha_ar_iteration_with_erf_eq)
+
+bestcost_noise_ha_ar_iteration_with_erf_eq_mc <-
+  healthiar::include_summary_uncertainty(
+    res = bestcost_noise_ha_ar_iteration_with_erf_eq,
+    n_sim = 100)
+
+# Comparison central +- 95% CIs & Monte-Carlo central, lower, upper estimates
+# View(bestcost_pm_yld_singlebhd_with_summary_uncertainty)
+print("Main estimates: ") ; bestcost_noise_ha_ar_iteration_with_erf_eq[["health_main"]][["impact_rounded"]]
+print("Summary uncertainty estimates (external function): ")
+round(as.numeric(bestcost_noise_ha_ar_iteration_with_erf_eq_mc[["uncertainty_main"]]), digits = 0)
+# Results seem plausible
+
 ```
 
 
