Added `rowwise` before the `get_risk` calls + added example of RR user-defined ERF with uncertainties

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -484,7 +484,7 @@ bestcost_pm_stroke_mr_brt <-
         method = "natural"),
     erf_eq_lower = stats::splinefun(
         x = MRBRT_stroke$exposure,
-        y = MRBRT_stroke$mean - 0.01,
+        y = MRBRT_stroke$mean,
         method = "natural"),
     erf_eq_upper = stats::splinefun(
         x = MRBRT_stroke$exposure,
@@ -499,7 +499,9 @@ bestcost_pm_stroke_mr_brt <-
 # check_bestcost(result_list_bestcost = bestcost_pm_stroke_mr_brt,
 #                result_vector_alternative = c(249)) # Results on 17 October 2024 (with cutoff = 0)
 check_bestcost(result_list_bestcost = bestcost_pm_stroke_mr_brt,
-               result_vector_alternative = c(32)) # Results on 17 October 2024 (with cutoff = 5 = airqplus_pm_copd$cut_off_value)
+               # result_vector_alternative = c(32)) # Results on 17 October 2024 (with cutoff = 5 = airqplus_pm_copd$cut_off_value),
+               result_vector_alternative = c(32,32,76)) # Results on 19 December 2024 (with cutoff = 5 = airqplus_pm_copd$cut_off_value) & erf_eq uncertainty
+
 ```
 
 
